Fixed Cursor Bug on Small Sides (With)

--- a/views/ContactUs/style.css
+++ b/views/ContactUs/style.css
@@ -304,6 +304,14 @@
     .cursor{
         display: none;
     }
+    
+    .cursor2{
+      display: none;
+    }
+
+    #btnSend{
+      cursor: pointer;
+    }
   
     #hamburger{
         display: block;
