--- a/views/Main/style.css
+++ b/views/Main/style.css
@@ -572,7 +572,7 @@ body{
   }
 
   #sec4_text p{
-    text-align: center;
+    text-align: justify;
   }
 
   #section5_content {
